[package]
name = "pi-gb-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
mizu-core = { path = "vendor/mizu-core" }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
tempfile = "3"
cpal = { version = "0.17", optional = true }
ringbuf = { version = "0.4", optional = true }

[features]
audio-cpal = ["cpal", "ringbuf"]

[build-dependencies]
napi-build = "2"
